[SH] api routes and swagger now suncronized.  still need to hook api back up to angular
